--- a/4.html
+++ b/4.html
@@ -46,32 +46,28 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-				<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
-			</header>
-			<p>Mavenlink describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
-			<p>Around 2018 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. I was asked to be the lead designer on this effort.</p>
-			<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
-			<p>We started out with team of ~6 engineers, a product manager and myself. My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could <a href="https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/" target="_blank">see the immediate, visible results of their actions.</a> I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
-			<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both. We released to all our customers about two years later.</p>
-			<p>Something we learned is that our customers (and I think pretty much everyone out there) have a high expectation for interaction design. They expect the interaction, usability, and feature set or tools available to be as good as the best bar interface they have ever used.</p>
-		</main>
-		<section class="gallery">
-			<figure>
-				<img src="img/ml-4.jpg" alt="Portfolio" />
-				<figcaption>We conducted a lot of research. Talking to customers about how they work.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/ml-2.gif" alt="Portfolio" />
-				<figcaption>Moving allocations, simply drag and drop.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/ml-3.gif" alt="Portfolio" />
-				<figcaption>Splitting allocations.</figcaption>
-			</figure>
-		</section>
+		<header>
+			<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
+			<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
+		</header>
+		<p>Mavenlink describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
+		<p>Around 2018 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. I was asked to be the lead designer on this effort.</p>
+		<figure>
+			<img src="img/ml-4.jpg" alt="Portfolio" />
+			<figcaption>We conducted a lot of research. Talking to customers about how they work.</figcaption>
+		</figure>
+		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
+		<figure class="screen">
+			<img src="img/ml-2.gif" alt="Portfolio" />
+			<figcaption>Moving allocations, simply drag and drop.</figcaption>
+		</figure>
+		<figure class="screen">
+			<img src="img/ml-3.gif" alt="Portfolio" />
+			<figcaption>Splitting allocations.</figcaption>
+		</figure>
+		<p>We started out with team of ~6 engineers, a product manager and myself. My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could <a href="https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/" target="_blank">see the immediate, visible results of their actions.</a> I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
+		<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both. We released to all our customers about two years later.</p>
+		<p>Something we learned is that our customers (and I think pretty much everyone out there) have a high expectation for interaction design. They expect the interaction, usability, and feature set or tools available to be as good as the best bar interface they have ever used.</p>
 		<figure class="hero">
 			<img src="img/ml-1.gif" alt="Portfolio" />
 			<figcaption>Resource planning in Mavenlink.</figcaption>
