--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 		<main>
 			<header>
 				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-				<h1>Hello, I&rsquo;m Nathan Philpot, thanks for taking the time to visit.</h1>
-				<p>At work I am a product designer. I design usable interfaces and enjoyable user experiences.</p>
+				<h1>I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, or getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the real world being used by people to make their lives better.</h1>
 			</header>
 			<section class="process">
 				<h2>Customers, collaboration, confidence. My design process.</h2>
