--- a/4.html
+++ b/4.html
@@ -50,31 +50,51 @@
 			<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
 			<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
 		</header>
-		<p>Mavenlink describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
-		<p>Around 2018 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. I was asked to be the lead designer on this effort.</p>
+		<h3><span class="tag">Project</span> Resource Planning</h3>
+		<p>Mavenlink (now Kantata) describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
+		<p>In 2017 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. In 2017 I started work on resource management in Mavenlink. I was asked to be the lead designer on this effort. This work would eventually be released in January of 2018.</p>
+		<h3><span class="tag">Role</span> Lead Designer</h3>
+		<p>As lead designer I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
+		<h3><span class="tag">Process</span></h3>
+		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
 		<figure>
 			<img src="img/ml-4.jpg" alt="Portfolio" />
-			<figcaption>We conducted a lot of research. Talking to customers about how they work.</figcaption>
+			<figcaption>Not actual participants. To protect the privacy of research participants I am using photos by <a href="https://unsplash.com/@visuals?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">visuals</a>, <a href="https://unsplash.com/@windows?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Windows</a>, <a href="https://unsplash.com/@kaleidico?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Kaleidico</a> on <a href="https://unsplash.com/photos/6G6akT8biLg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
+			</figcaption>
 		</figure>
-		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
+		<p>As we learned about resource managers I would share these findings and talk about themes and design directions we were exploring.</p>
+		<figure>
+			<img src="img/ml-photo-2.png" alt="Portfolio" />
+			<figcaption>Synthesized research learnings.</figcaption>
+		</figure>
+		<figure>
+			<img src="img/ml-photo-1.jpg" alt="Portfolio" />
+			<figcaption>Collaborative design explorations and solutioning exercises with engineering and product stakeholders.</figcaption>
+		</figure>
+		<p>At this point we made sure to include engineering to allow them time to think about and estimate how we might build this. We also starting prototyping these ideas and shared them internally.</p>
 		<figure class="screen">
-			<img src="img/ml-2.gif" alt="Portfolio" />
-			<figcaption>Moving allocations, simply drag and drop.</figcaption>
+			<img src="img/ml-2b.png" alt="Portfolio" />
+			<figcaption>Prototyping</figcaption>
 		</figure>
-		<figure class="screen">
-			<img src="img/ml-3.gif" alt="Portfolio" />
-			<figcaption>Splitting allocations.</figcaption>
+		<p>We took the designs back to our customers to further validate and test. This is where we did the most iteration. We would show a design to a few customers, listen to feedback, make changes and test again.</p>
+		<p>We learned a lot about of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both.</p>
+		<figure>
+			<img src="img/ml-3.jpg" alt="Portfolio" />
+			<figcaption>Prototype testing</figcaption>
 		</figure>
-		<p>We started out with team of ~6 engineers, a product manager and myself. My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could <a href="https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/" target="_blank">see the immediate, visible results of their actions.</a> I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
-		<p>There were a ton of trade-offs. No one service business does things the same. But we did find basic principles that they all had to follow to run a profitable business and built in a lot of flexibility. One simple example is how to display allocations. It was about split 50/50 on those who liked seeing allocations in percentages or hours per week. So we ended up displaying both. We released to all our customers about two years later.</p>
-		<p>Something we learned is that our customers (and I think pretty much everyone out there) have a high expectation for interaction design. They expect the interaction, usability, and feature set or tools available to be as good as the best bar interface they have ever used.</p>
+		<p>As we refined the prototype and learned what was essential we started to set a scope and estimate with engineering for a version one we could release by January 2018. We also got to a point in our prototyping that we felt we weren&rsquo;t learning big new things and had the confidence in our design. We started building. This too was a collaborative process. As we built with engineering we continued to learn new things and iterate on the design.</p>
+		<figure class="hero">
+			<img src="img/ml-6.png" alt="Portfolio" />
+			<figcaption>Resource planning in Mavenlink.</figcaption>
+		</figure>
+		<p>My most important partner in this process was the product manager I worked with. Also the engineering team did an amazing job of building a front-end <abbr>UI</abbr> that was responsive and allowed the users to feel they could see the immediate, visible results of their actions.</p>
 		<figure class="hero">
 			<img src="img/ml-1.gif" alt="Portfolio" />
-			<figcaption>Resource planning in Mavenlink.</figcaption>
+			<figcaption>Design exploration. Around the same time we were exploring a new design systems.</figcaption>
 		</figure>
 		<figure class="hero">
 			<img src="img/ml-5.gif" alt="Portfolio" />
-			<figcaption>Mobile concept.</figcaption>
+			<figcaption>Mobile concept</figcaption>
 		</figure>
 	</div>
 	<a class="totop">&uarr;</a>
