--- a/1.html
+++ b/1.html
@@ -46,35 +46,31 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-				<h1><a href="https://www.hrblock.com" target="_blank">H&amp;R Block<i>&nearr;</i></a> <a href="https://www.hrblock.com/tax-offices/" target="_blank">TaxWorks<i>&nearr;</i></a></h1>
-			</header>
-			<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, TaxWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
-			<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
-			<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
-			<p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
-			<p>There where thousands of screens in this product and teams working on it around the world. It was impossible to design everyone screen myself. So I created &amp; and shared design principles to help product managers and engineers think about the experience and help make design decisions.</p>
-		</main>
-		<section class="gallery">
-			<figure>
-				<img src="img/hrb-2.jpg" alt="Portfolio" />
-				<figcaption>Field observations.</figcaption>
-			</figure>
-			<figure>
-				<img src="img/hrb-3.png" alt="Portfolio" />
-				<figcaption>Product Experience Principles</figcaption>
-			</figure>
-			<figure>
-				<img src="img/hrb-4.png" alt="Portfolio" />
-				<figcaption>Product Experience Principles</figcaption>
-			</figure>
-			<figure>
-				<img src="img/hrb-6.jpg" alt="Portfolio" />
-				<figcaption>User Journeys</figcaption>
-			</figure>
-		</section>
+		<header>
+			<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
+			<h1><a href="https://www.hrblock.com" target="_blank">H&amp;R Block<i>&nearr;</i></a> <a href="https://www.hrblock.com/tax-offices/" target="_blank">BlockWorks<i>&nearr;</i></a></h1>
+		</header>
+		<h3>Project &rarr; BlockWorks</h3>
+		<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, BlockWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
+		<h3>Role &rarr; Lead Designer</h3>
+		<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
+		<h3>Process</h3>
+		<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
+		<figure>
+			<img src="img/hrb-2.jpg" alt="Portfolio" />
+			<figcaption>Field observations.</figcaption>
+		</figure>
+		<p>A big part of the job was understanding the Tax Pro and the retail experience. The Tax Pro had to have confidence when using the product, because they had to be confident for their customers when preparing their taxes.</p>
+		<figure>
+			<img src="img/hrb-6.jpg" alt="Portfolio" />
+			<figcaption>User Journeys</figcaption>
+		</figure>
+		<p>There where thousands of screens in this product and teams working on it around the world. It was impossible to design everyone screen myself. So I created &amp; and shared design principles to help product managers and engineers think about the experience and help make design decisions.</p>
+		<figure class="screen">
+			<img src="img/hrb-3-4.png" alt="Portfolio" />
+			<figcaption>Product Experience Principles</figcaption>
+		</figure>
+		<p>The final design, which was a <a href="https://www.microsoft.com/en-us/windows">Windows</a> app built in <a href="https://www.microsoft.com/silverlight/">Silverlight</a>.</p>
 		<figure class="hero">
 			<img src="img/hrb-5.png" alt="Portfolio" />
 			<figcaption>That is some intense form design!</figcaption>
