--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
 			</section>
 			<section class="works">
-				<div id="blink" class="blink">
+				<!-- <div id="blink" class="blink">
 					<svg x="0px" y="0px" viewBox="0 0 21.2 35" style="enable-background:new 0 0 21.2 35; width: 21.5px; height: 35px;" xml:space="preserve">
 						<polygon points="21.2,14.7 11.7,14.7 16,0 0,20.3 9.8,20.3 5.5,35 "></polygon>
 					</svg>
-				</div>
+				</div> -->
+				<div class="mallard">&#129414;</div>
 				<h2>Work</h2>
 				<div class="work">
 					<h3><a href="5.html">CircleCI</a></h3>
