--- a/4.html
+++ b/4.html
@@ -50,12 +50,12 @@
 			<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
 			<h1><a href="https://www.mavenlink.com" target="_blank">Mavenlink<i>&nearr;</i></a></h1>
 		</header>
-		<h3><span class="tag">Project</span> Resource Planning</h3>
+		<h3>Project &rarr; Resource Planning</h3>
 		<p>Mavenlink (now Kantata) describes itself as the &ldquo;industry cloud for professional services&trade;.&rdquo; Our product helps service teams with project management and resource management.</p>
 		<p>In 2017 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. In 2017 I started work on resource management in Mavenlink. I was asked to be the lead designer on this effort. This work would eventually be released in January of 2018.</p>
-		<h3><span class="tag">Role</span> Lead Designer</h3>
+		<h3>Role &rarr; Lead Designer</h3>
 		<p>As lead designer I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
-		<h3><span class="tag">Process</span></h3>
+		<h3>Process</h3>
 		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
 		<figure>
 			<img src="img/ml-4.jpg" alt="Portfolio" />
