--- a/1.html
+++ b/1.html
@@ -54,6 +54,8 @@
 		<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, BlockWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
 		<h3>Role &rarr; Lead Designer</h3>
 		<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
+		<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+		<p>There were a lot of business reasons and technical reasons for this project, but as the <abbr>UX</abbr> designer I had to keep in mind the tax pro. The tax pro needed a tool that would help them confidently and accurately prepare a tax return. In the retail setting this was an essential part of the experience.</p>
 		<h3>Process</h3>
 		<p>I had a lot to learn about taxes. There was a lot of expertise and knowledge inside the building. I started talking to everyone. I also did a lot of field observation. This was invaluable. Seeing tax pros use the product and interact with their clients was key to building a great product and experience. Hands down the best way to improve the experience is to watch people using your products.</p>
 		<figure>
