--- a/4.html
+++ b/4.html
@@ -55,6 +55,8 @@
 		<p>In 2017 they wanted to be the leader in resource management for professional services. Mavenlink felt that no one else was doing what they wanted to do. This would be key to their future growth and market differentiation. In 2017 I started work on resource management in Mavenlink. I was asked to be the lead designer on this effort. This work would eventually be released in January of 2018.</p>
 		<h3>Role &rarr; Lead Designer</h3>
 		<p>As lead designer I was responsible for conducting research (over 50 interviews), sharing reasons behind decisions and directions with business leadership, story mapping, building prototypes and designing the final user interface.</p>
+		<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+		<p>For resource planners setting delivery teams up to succeed is critical. With things always changing we needed to give them the ability to plan ahead and maintain a healthy workforce. Deeper than that for resource planners we wanted to give them the confidence to be able contribute strategically to their organization and help those they allocate better enjoy their work and grow their careers.</p>
 		<h3>Process</h3>
 		<p>We started by talking to resource managers. The resource manager&rsquo;s responsibilites include balancing work (demand) and resources (supply). A lot of their time is negotiating with project managers, people managers, and helping people do work they want to do and grow their careers. Depending on the size of the company the person who performs these responsibilites can be hard to define.</p>
 		<figure>
