--- a/2.html
+++ b/2.html
@@ -46,31 +46,33 @@
 <body>
 
 	<div class="page">
-		<main>
-			<header>
-				<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
-				<h1><a href="https://www.wgu.edu" target="_blank"><abbr>WGU</abbr><i>&nearr;</i></a> <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">App<i>&nearr;</i></a></h1>
-			</header>
-			<p><abbr>WGU</abbr> is an online university that practices compentency-based learning. Competency-based learning measures skills and learning rather than time spent in a classroom.</p>
-			<p><abbr>WGU</abbr> hired me to help them design their mobile products. At the time, there mobile app was basically a notication center for test grades. They wanted to give them access to the curriculum, the tools to complete assignments, track progress, and have access to their mentors. The hope was that this would help their students make progress in their programs.</p>
-			<p>When I started on this project, it was just me and one iOS engineer. I played the role of product manager and designer for about the first ~9 months. At a higher education institution stakeholders included product and business leadership, as well as working with education stakeholders. I set the the direction and vision for the app, worked with the stakeholders to outline a roadmap of what our first release might look like. While doing this, I conducted research, <a href="https://www.jpattonassociates.com/story-mapping/" target="_blank">story mapped</a> and prototyped with engineers and collaborated with other designers. By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
-			<p>One of the funnest parts of this project was talking with student and understanding where and how they learned. In the <abbr>WGU</abbr> office building, there was a testing center on the ground floor. I would hangout down there and as students finished their tests, I asked if they would like to participate in some user research. The ones that had the time, and agreed, I conducted interviews and tested prototypes and information architecture ideas. I also worked with educators and asked how might we bake into the experience ways to help students learn better.</p>
-		</main>
-		<section class="gallery">
-			<figure>
-				<img src="img/wgu-3.jpg" alt="Portfolio" />
-				<figcaption>Sticky notes and whiteboards. Is it even design without them?</a>
-				</figcaption>
-			</figure>
-			<figure>
-				<img src="img/wgu-2.png" alt="Portfolio" />
-				<figcaption>App store <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">reviews<i>&nearr;</i></a>.</figcaption>
-			</figure>
-		</section>
+		<header>
+			<a href="/" class="pic"><img src="img/me.png" alt="Me" /></a>
+			<h1><a href="https://www.wgu.edu" target="_blank"><abbr>WGU</abbr><i>&nearr;</i></a> <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">App<i>&nearr;</i></a></h1>
+		</header>
+		<h3>Project &rarr; WGU Mobile App</h3>
+		<p><abbr>WGU</abbr> is an online university that practices compentency-based learning. Competency-based learning measures skills and learning rather than time spent in a classroom.</p>
+		<h3>Role &rarr; Lead Designer</h3>
+		<p><abbr>WGU</abbr> hired me to help them design their mobile products. At the time, there mobile app was basically a notication center for test grades.</p>
+		<h3>The problem&hellip; <span class="hilite">the why</span></h3>
+		<p>Students really had no way of studying, and making progress except at a desktop computer. <abbr>WGU</abbr> students tend to be working adults with families, and their programs are setup so students can work at their own pace. So giving them access to the curriculum, assignments, track progress, and have access to their mentors anywhere, anytime, on any device was really important to helping them make progress in their education.</p>
+		<h3>Process</h3>
+		<p>When I started on this project, it was just me and one iOS engineer. I played the role of product manager and designer for about the first ~9 months. At a higher education institution stakeholders included product and business leadership, as well as working with education stakeholders. I set the the direction and vision for the app, worked with the stakeholders to outline a roadmap of what our first release might look like. While doing this, I conducted research, <a href="https://www.jpattonassociates.com/story-mapping/" target="_blank">story mapped</a> and prototyped with engineers and collaborated with other designers.</p>
+		<figure>
+			<img src="img/wgu-3.jpg" alt="Portfolio" />
+			<figcaption>Sticky notes and whiteboards. Is it even design without them?</a>
+			</figcaption>
+		</figure>
+		<p>One of the funnest parts of this project was talking with student and understanding where and how they learned. In the <abbr>WGU</abbr> office building, there was a testing center on the ground floor. I would hangout down there and as students finished their tests, I asked if they would like to participate in some user research. The ones that had the time, and agreed, I conducted interviews and tested prototypes and information architecture ideas. I also worked with educators and asked how might we bake into the experience ways to help students learn better.</p>
 		<figure class="hero">
 			<img src="img/wgu-1.png" alt="Portfolio" />
 			<figcaption>Study time.</figcaption>
 		</figure>
+		<figure>
+			<img src="img/wgu-2.png" alt="Portfolio" />
+			<figcaption>App store <a href="https://apps.apple.com/us/app/mywgu-mobile/id1017785894" target="_blank">reviews<i>&nearr;</i></a>.</figcaption>
+		</figure>
+		<p>By the time I ended up leaving <abbr>WGU</abbr>, the team had grown to include a product manager, and on and off shore engineering teams for both iOS and Android devices.</p>
 	</div>
 	<a class="totop">&uarr;</a>
 
