--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<h1>I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the real world being used by people to make their lives better.</h1>
 			</header>
 			<section class="process">
-				<h2>My design process</h2>
+				<h2>My Design Process</h2>
 				<p>Talk to customers, a lot. Collaborate with your team: product managers, engineers, researchers, data, writers, <abbr>SME</abbr>s. Prototype until you are confident in your solution. Design can help with the level of confidence in your decisions and direction.</p>
 				<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more.</p>
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
