--- a/index.html
+++ b/index.html
@@ -26,17 +26,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-	<script type="text/javascript">
-
-		function blinktag() {
-			var s=document.getElementById("blink");
-			s.style.visibility=(s.style.visibility=='visible')?'hidden':'visible';
-		}
-
-		setInterval('blinktag()',500);
-
-	</script>
+	<link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Slackside+One&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -45,25 +35,19 @@
 		<main>
 			<header>
 				<a href="/" class="pic home"><img src="img/me.png" alt="Me" /></a>
-				<h1>I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the real world being used by people to make their lives better.</h1>
+				<h1>I am a product designer. I design usable interfaces and enjoyable user experiences. I am passionate about finding the truth, getting to the heart of the problem&hellip; <span class="hilite">the why</span>. I love seeing my designs out in the world being used by people to make their lives better. I have been in <abbr>IC</abbr>, lead, and management roles.</h1>
 			</header>
 			<section class="process">
 				<h2>My Design Process</h2>
-				<p>Talk to customers. Collaborate with your team: product managers, engineers, researchers, data, writers, <abbr>SME</abbr>s. Prototype and test until you are confident in your solution. Design can help with the level of confidence in your decisions and direction.</p>
+				<p>Talk to customers. Collaborate with your team. Prototype and test until you are confident in your solution. Design can help with the level of confidence in your decisions and direction.</p>
 				<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more.</p>
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
 			</section>
 			<section class="works">
-				<!-- <div id="blink" class="blink">
-					<svg x="0px" y="0px" viewBox="0 0 21.2 35" style="enable-background:new 0 0 21.2 35; width: 21.5px; height: 35px;" xml:space="preserve">
-						<polygon points="21.2,14.7 11.7,14.7 16,0 0,20.3 9.8,20.3 5.5,35 "></polygon>
-					</svg>
-				</div> -->
-				<div class="mallard">&#129414;</div>
 				<h2>Work</h2>
 				<div class="work">
-					<h3><a href="5.html">CircleCI</a></h3>
-					<p>Lead designer on a few product experience teams. Helping our design team be the best they can be.</p>
+					<h3>CircleCI (work samples coming soon)</h3>
+					<p>Lead designer on a three product experience teams. Helping our design team be the best they can be.</p>
 				</div>
 				<div class="work">
 					<h3><a href="4.html">Mavenlink</a></h3>
@@ -71,7 +55,7 @@
 				</div>
 				<div class="work">
 					<h3><a href="1.html">H&amp;R Block</a></h3>
-					<p>I was the lead designer on their tax-pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue.</p>
+					<p><abbr>UX</abbr> designer on their tax-pro product. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue.</p>
 				</div>
 				<div class="work">
 					<h3><a href="2.html"><abbr>WGU</abbr></a></h3>
