--- a/1.html
+++ b/1.html
@@ -26,21 +26,9 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Slackside+One&display=swap" rel="stylesheet">
 
 	<script src="js/scripts.js" type="text/javascript"></script>
-
-	<script type="text/javascript">
-
-		function blinktag() {
-			var s=document.getElementById("blink");
-			s.style.visibility=(s.style.visibility=='visible')?'hidden':'visible';
-		}
-
-		setInterval('blinktag()',500);
-
-	</script>
 
 </head>
 <body>
@@ -52,7 +40,7 @@
 		</header>
 		<h3>Project &rarr; BlockWorks</h3>
 		<p>H&amp;R Block is the world&rsquo;s largest tax service provider. Working at H&amp;R Block was a great experience. I was the lead designer on their tax-pro product, BlockWorks. This product is used by the tax pros in their retail offices, a channel for a billion dollars in revenue. I worked with people that were truly passionate and cared about their customers. Because they cared, going through the discovery, research and design process was natural for them.</p>
-		<h3>Role &rarr; Lead Designer</h3>
+		<h3>Role &rarr; <abbr>UX</abbr> Designer</h3>
 		<p>My responsibilities included <abbr>UI</abbr> design, usability testing, and research to improve the customer&rsquo;s experience by helping the tax pro deliver a great customer experience when preparing tax returns. I worked with the many product managers and engineering teams that where involved in building and maintaining the product.</p>
 		<h3>The problem&hellip; <span class="hilite">the why</span></h3>
 		<p>There were a lot of business reasons and technical reasons for this project, but as the <abbr>UX</abbr> designer I had to keep in mind the tax pro. The tax pro needed a tool that would help them confidently and accurately prepare a tax return. In the retail setting this was an essential part of the experience.</p>
