--- a/4.html
+++ b/4.html
@@ -26,21 +26,10 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Slackside+One&display=swap" rel="stylesheet">
 
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 	<script src="js/scripts.js" type="text/javascript"></script>
-
-	<script type="text/javascript">
-
-		function blinktag() {
-			var s=document.getElementById("blink");
-			s.style.visibility=(s.style.visibility=='visible')?'hidden':'visible';
-		}
-
-		setInterval('blinktag()',500);
-
-	</script>
 
 </head>
 <body>
