--- a/2.html
+++ b/2.html
@@ -40,7 +40,7 @@
 		</header>
 		<h3>Project &rarr; WGU Mobile App</h3>
 		<p><abbr>WGU</abbr> is an online university that practices compentency-based learning. Competency-based learning measures skills and learning rather than time spent in a classroom.</p>
-		<h3>Role &rarr; Lead Designer</h3>
+		<h3>Role &rarr; Sr. <abbr>UX</abbr> Designer</h3>
 		<p><abbr>WGU</abbr> hired me to help them design their mobile products. At the time, there mobile app was basically a notication center for test grades.</p>
 		<h3>The problem&hellip; <span class="hilite">the why</span></h3>
 		<p>Students really had no way of studying, and making progress except at a desktop computer. <abbr>WGU</abbr> students tend to be working adults with families, and their programs are setup so students can work at their own pace. So giving them access to the curriculum, assignments, track progress, and have access to their mentors anywhere, anytime, on any device was really important to helping them make progress in their education.</p>
