--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</header>
 			<section class="process">
 				<h2>My Design Process</h2>
-				<p>Talk to customers. Collaborate with your team. Prototype and test until you are confident in your solution. Design can help with the level of confidence in your decisions and direction.</p>
+				<p>Talk to and understand your customers. Collaborate with your team. Prototype and test until you are confident in your solutions.</p>
 				<p>There are a lot of design tools, methods and processes. Design sprints, story mapping, personas, journey maps, usability testing, wireframes, user flows, affinity maps, empathy maps, value proposition canvas, competitive analysis, research, heuristic evaluation, prototyping and more.</p>
 				<p>It&rsquo;s just that I have found that the three things I most consistently use and see the best results from can be generalized as: talking to customers, collaborating with the team, and prototyping and testing solutions.</p>
 			</section>
