--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h2>Work</h2>
 				<div class="work">
 					<h3>CircleCI (work samples coming soon)</h3>
-					<p>Lead designer on a three product experience teams. Helping our design team be the best they can be.</p>
+					<p>Lead designer on three product experience teams. Helping our design team be the best they can be.</p>
 				</div>
 				<div class="work">
 					<h3><a href="4.html">Mavenlink</a></h3>
